type: <fix> action: <only hide overflow on the x-axis >

--- a/style/style.scss
+++ b/style/style.scss
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   font-family: sans-serif;
   font-weight: 400;
-  overflow: hidden;
+  overflow-x: hidden;
   /* !need to find a way to not add !important */
 }
 
